# hybrid-breastCT

./: .gitignore  LICENSE  README.md  hybrid-simulation-all.py  pyproject.toml  readme  readme.md  requirements.txt
code/: README.md  ScanLog.xlsx  hybrid-simulation.py  requirements.txt  scanlog.xlsx  utils.py
code/calc_models/: README.md  fxn_generate_calc.py  fxn_generate_spherical_calc.py  rotate_calc.py
code/energy_spectra/: README.md  W49kVp_1.5mmAl_2.0mmPC.spc  W60kVp_0.25mmCu.spc  W60kVp_0.2mmGd.spc
code/material_files/: CalciumOxalate__5-120keV.mcgpu  CesiumIodide__5-120keV.txt  README.md  adipose__5-120keV.mcgpu  glandular__5-120keV.mcgpu  skin__5-120keV.mcgpu  water__5-120keV.mcgpu
code/system_specific/energy_spectra/: README.md  W28kVp_Rh50um_Be1mm.spc  W60kVp_0.2mmGd.spc
code/system_specific/material_files/: CesiumIodide__5-120keV.txt  Hydroxyapatite__5-120keV.mcgpu  README.md  glandular__5-120keV.mcgpu
code/utils/: utils.py
configs/: doheny_example.yaml  template_generic.yaml
docs/: README.rst
docs/source/: conf.py  example_class.rst  example_function.rst  index.rst
examples/doheny/: detector_mtf.csv
examples/doheny/energy_spectra/: README.md
hybrid_bct/: cli.py  config.py  metadata.py  pipeline.py  reconstruction.py
hybrid_bct/io/: materials.py  spectra.py
hybrid_bct/simulation/: blur.py  calc_models.py  insertion.py  projection.py  voi.py  volume.py
hybrid_bct/systems/: base.py  doheny.py
scripts/: run_hybrid.py  validate_inputs.py
src/package/: __init__.py  example_class.py  example_function.py
(+4 files in other folders)
